# wasm-example

./: .gitignore  next.config.js  package.json
.husky/: pre-commit
pages/: index.tsx
styles/: page_index.module.css
wasm/: Cargo.toml
wasm/pkg/: wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
